[platform] detaching JB protocol from `ProjectUtil`
GitOrigin-RevId: 5eb66b9d91fc8b70e751d7c71bec21f3dfe074dc