@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.project.impl;
 
 import com.intellij.ide.impl.OpenProjectTask;
@@ -11,26 +11,20 @@ import com.intellij.openapi.vfs.LocalFileSystem;
 import org.jetbrains.annotations.NotNull;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
 /**
  * @author Konstantin Bulenkov
  */
-public final class JBProtocolOpenProjectCommand extends JBProtocolCommand {
+final class JBProtocolOpenProjectCommand extends JBProtocolCommand {
   JBProtocolOpenProjectCommand() {
     super("open");
   }
 
   @Override
   public void perform(String target, @NotNull Map<String, String> parameters) {
-    Path projectPath = toPath(target);
-    ApplicationManager.getApplication().invokeLater(() -> {
-      ProjectUtil.openProject(projectPath, new OpenProjectTask());
-    }, ModalityState.NON_MODAL);
-  }
-
-  public static Path toPath(String path) {
-    return Paths.get(StringUtil.trimStart(path, LocalFileSystem.PROTOCOL_PREFIX)).normalize();
+    Path path = Path.of(StringUtil.trimStart(target, LocalFileSystem.PROTOCOL_PREFIX)).normalize();
+    OpenProjectTask options = new OpenProjectTask().untrusted();
+    ApplicationManager.getApplication().invokeLater(() -> ProjectUtil.openProject(path, options), ModalityState.NON_MODAL);
   }
 }
